# Include_stdafx_in_CMake

./: CMakeLists.txt  README.md
src/: hello.cpp  stdafx_force_includable.cpp
